--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "poc-html",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"
-  }
+	"name": "poc-html",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"start": "node server.js",
+		"watch": "nodemon server.js --env-file=.env -e js,html"
+	},
+	"dependencies": {
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"http-proxy-middleware": "^2.0.6",
+		"jquery": "^3.7.1"
+	}
 }
