feat: enhance server configuration and proxy handling
- Added PUBLIC_DOMAIN environment variable for production domain configuration.
- Updated docker-compose to include environment variables for frontend service.
- Implemented a helper function in server.js to determine the base origin for requests, improving proxy URL handling.
- Enhanced logging for origin detection and proxy URL rewriting.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Server Configuration
 USE_HTTPS=true
 PORT=8080
+PUBLIC_DOMAIN=https://poc.vastmenu.com
 
 # Certificate paths (only used when USE_HTTPS=true)
 CERT_PATH=cert.pem
